# torchscript_custom_op_rust_example

./: README.md
custom_op/: .gitignore  CMakeLists.txt  check_op.py  cmake_path.ps1  cmake_path.sh  compile_ops.bat  compile_ops.py  compile_ops.sh  cuda_utils.cuh  op.cpp  script.py
custom_op/cuda_extension.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
custom_op/src/: bindings.cpp
custom_op/src/ball_query/: ball_query.cpp  ball_query.hpp
executor/: Cargo.toml  build.rs  set_env.ps1  set_env.sh
executor/src/: main.rs
